public/assets/css/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Inter', sans-serif;

    --bg-main: #111110;
    --bg-sidebar: #161614;
    --bg-header: #1a1a18;
    --bg-hover: #1e1e1c;
    --bg-element: #2c2c2a;
    --border: #2e2e2b;

    --text-primary: #d3d1c7;
    --text-sencondary: #888780;
    --text-muted: #5f5e5a;
    --text-code: #b4b2a9;
}

.layout {
    display: flex;
    flex-direction: column;
    height: 100vh;
    min-width: 600px;
}

.main-content {
    flex: 1;
    overflow-y: auto;
    padding: 2rem;
}

body {
    background: var(--bg-main);
    color: var(--text-primary);
}

.header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 5rem;
    background: var(--bg-header);
    border-bottom: 0.5px solid var(--border);
    width: 100%;
    height: 6vh;
    flex-shrink: 0;
    gap: 3rem;
    min-height: 60px;
}

.header-left {
    display: flex;
    align-items: center;
    gap: 3rem;
}


.site-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    gap: 1rem;
    font-size: 2rem;
    white-space: nowrap;
    position: fixed;
    font-weight: 300px;
}

.site-title a {
    text-decoration: none;
    color: inherit;
    
}

.site-title a:hover{
    color: var(--text-sencondary);
}

.header-right {
    display: flex;
    align-items: center;
    gap: 3rem;
}

.search-bar {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    padding: 6px 12px;
    border: 0.5px solid var(--border);
    border-radius: 8px;
    background: var(--bg-sidebar);
}

.search-bar input {
    background: none;
    border: none;
    outline: none;
    font-size: 1rem;
    color: white;
    width: 10rem;
}

.sidebar-container {
    display: flex;
    flex: 1;
    overflow: hidden;
}

.sidebar {
    position: sticky;
    width: 20vw;
    min-width: 300px;
    flex-shrink: 0;
    border-right: 0.5px solid var(--border);
    overflow-y: auto;
    padding-top: 2rem;
    padding-bottom: 2rem;
    background: var(--bg-sidebar);
}

.nav-section {
    margin-bottom: 1.5rem;
}

.nav-label {
    font-size: 1rem;
    font-weight: 100;
    color: var(--text-muted);
    text-transform: uppercase;
    letter-spacing: 0.08rem;
    padding: 0 1.5rem;
    margin-bottom: 0.3rem;
}

.nav-item {
    display: flex;
    align-items: center;
    gap: 0.8rem;
    padding: 0.5rem 1.5rem;
    font-size: 1rem;
    color: var(--text-sencondary);
    text-decoration: none;
    cursor: pointer;
    transition: 0.1s;
    font-weight: 100;
}

.nav-item:hover {
    background: var(--bg-hover);
    color: var(--text-primary);
}

.nav-item.active {
    background: var(--bg-hover);
    color: var(--text-primary);
}

.nav-dot {
    width: 0.5rem;
    height: 0.5rem;
    border-radius: 50%;
    background: currentColor;
    opacity: 0.4;
    flex-shrink: 0;
}

.nav-dot.active:hover {
    opacity: 1;
}

